--- a/hibernate/src/main/resources/application.properties
+++ b/hibernate/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #spring.application.name=hibernate
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=pg123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgresSQL10Dialect
