Create new branch spring-jpa Реализовано приложение для ветки spring-jpa Исправление замечаний в ветке main

--- a/hibernate/src/main/resources/application.properties
+++ b/hibernate/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #spring.application.name=hibernate
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
 spring.datasource.password=pg123
 spring.jpa.hibernate.ddl-auto=update
